# yeyun

./: .gitignore  README.md
AI_Health_final/: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  seed.sql
AI_Health_final/.github/workflows/: checks.yml
AI_Health_final/ai_worker/: Dockerfile  db.py  main.py
AI_Health_final/ai_worker/core/: __init__.py  config.py  logger.py
AI_Health_final/ai_worker/tasks/: __init__.py  guide.py  ocr.py  queue.py
AI_Health_final/app/: Dockerfile  main.py
AI_Health_final/app/core/: __init__.py  config.py  exceptions.py  logger.py
AI_Health_final/app/db/: databases.py
AI_Health_final/app/dependencies/: security.py
AI_Health_final/app/dtos/: analysis.py  auth.py  chat.py  diaries.py  drugs.py  errors.py  guides.py  health_profiles.py  notifications.py  ocr.py  reminders.py  schedules.py  users.py
AI_Health_final/app/models/: chat.py  diaries.py  guides.py  health_profiles.py  medications.py  notification_settings.py  notifications.py  ocr.py  psych_drugs.py  reminders.py  users.py
AI_Health_final/app/repositories/: guide_repository.py  health_profile_repository.py  notification_repository.py  ocr_repository.py  user_repository.py
AI_Health_final/app/services/: ai_ocr.py  analysis.py  auth.py  chat.py  diaries.py  emergency_guidance.py  guide_automation.py  guide_queue.py  guides.py  health_profiles.py  jwt.py  llm.py  medications.py  notification_settings.py  notifications.py  ocr.py  ocr_queue.py  psych_drugs.py  rag.py  reminders.py  schedules.py  (+1 more)
AI_Health_final/docs/: API_SPECIFICATION.md  API_명세서.xlsx  ARCHITECTURE_DESIGN.md  DEPLOYMENT_CHECKLIST.md  ERD_DBDIAGRAM_TOBE.dbml  EVALUATION_VERIFICATION.md  MODEL_EVALUATION_REPORT.md  PERFORMANCE_TEST_RESULTS.md  REQUIREMENTS_DEFINITION.md  ROLLBACK_RUNBOOK.md  SWIMLANE_4인_역할분담.md  TEAM_DEVELOPMENT_GUIDELINE.md  TECH_STACK_COMPARISON.md  요구사항_정의서.xlsx
AI_Health_final/envs/: example.local.env  example.prod.env
AI_Health_final/frontend/: index.html  package-lock.json  package.json  vite.config.ts
AI_Health_final/nginx/: default.conf  prod_http.conf  prod_https.conf
AI_Health_final/scripts/: certbot.sh  consistency_test.py  deployment.sh  init-letsencrypt.sh  performance_test.py
(+165 files in other folders)
